@@ -21,6 +21,11 @@
 2009-08-04  Milan Zamazal  <pdm@brailcom.org>
 
 	* lib/pytis/data/dbapi.py:
+	Try to reopen db connection on before raising any DBSystemException.
+
+2009-08-04  Milan Zamazal  <pdm@brailcom.org>
+
+	* lib/pytis/data/dbapi.py:
 	Raise DBSystemException instead of DBUserException on disconnection from db.
 
 2009-07-31  Pavel Hanak  <hanak@wpb.cz>
